--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@h3/eslint-config",
-  "version": "1.3.0",
+  "name": "eslint-config-h3",
+  "version": "1.0.0",
   "description": "Official HackerHappyHour eslint configuration",
   "main": "eslint.js",
   "scripts": {
@@ -8,18 +8,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HackerHappyHour/eslint-config.git"
+    "url": "git+https://github.com/HackerHappyHour/eslint-config-h3.git"
   },
   "keywords": [
     "eslint-config"
   ],
-  "author": "Brian Vanderbusch <brian.vanderbusch.qsho@statefarm.com> (https://github.com/CHIEFnChowCombo)",
+  "author": "Brian Vanderbusch <brian.vanderbusch@gmail.com> (https://github.com/LongLiveCHIEF)",
   "license": "MIT",
   "publishConfig":{
  	"access":"public" 
   },
   "bugs": {
-    "url": "https://github.com/HackerHappyHour/eslint-config/issues"
+    "url": "https://github.com/HackerHappyHour/eslint-config-h3/issues"
   },
-  "homepage": "https://github.com/HackerHappyHour/eslint-config#readme"
+  "homepage": "https://github.com/HackerHappyHour/eslint-config-h3#readme"
 }
